refactor(security): 重构验证码和安全模块代码结构- 将多个类从 class 转换为 record 以简化代码 - 更新方法命名以符合新的编码规范 - 移除不必要的 Lombok 注解 - 升级依赖版本以增强安全性与稳定性 - 重构加密相关类名与方法提升可读性 - 更新测试用例以匹配新的 API 调用方式